--- a/toll_services.html
+++ b/toll_services.html
@@ -33,17 +33,14 @@
    <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
    </svg>
 </button>-->
-<nav class="w-full bg-white border-0 shadow-none">
-  <div class="max-w-4xl mx-auto flex flex-col items-center pt-20 pb-8 pl-40">
-    <img src="/img/boilerplate stuff.png" alt="Creditswitch Logo" class="h-20">
-  </div>
-</nav>
 
-
-<div class="flex">
+<div class="max-lg:px-1">
   <div id="sidebarContainer" x-ref="sidebarContainer"></div>
 
-  <main class="flex-1 sm:ml-64 p-10 pt-5">
+  <main class="lg:ml-64 overflow-x-hidden p-10 pt-5 max-lg:px-4 max-lg:pb-2">
+        <div class="w-full mb-20 py-3 bg-white flex justify-center border-0 shadow-none">
+            <img src="/img/boilerplate stuff.png" alt="Creditswitch Logo" class="h-20 max-md:h-14 max-lg:h-16">
+        </div>
       
       <div class="mt-6 px-6 space-y-3">
         <h1 class="text-3xl font-semibold">Toll Services</h1>
