--- a/low_balance_service.html
+++ b/low_balance_service.html
@@ -39,6 +39,8 @@
         <div id="sidebarContainer" x-ref="sidebarContainer"></div>
 
         <main class="lg:ml-64 overflow-x-hidden p-10 pt-5 max-lg:w-full max-lg:px-4 max-lg:pb-2">
+            <!-- SideBar Mobile Button Component  -->
+            <div id="sidebarMobileButton" x-ref="sidebarMobileButton"></div>
             <div class="w-full mb-20 py-3 bg-white flex justify-center border-0 shadow-none">
                     <img src="/img/boilerplate stuff.png" alt="Creditswitch Logo" class="h-20 max-md:h-14 max-lg:h-16">
             </div>
