--- a/services.html
+++ b/services.html
@@ -26,18 +26,13 @@
   <title>Services</title>
 </head>
 <body x-data class="font-light font-inter">
-  
-<!--<button data-drawer-target="default-sidebar" data-drawer-toggle="default-sidebar" aria-controls="default-sidebar" type="button" class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
-   <span class="sr-only">Open sidebar</span>
-   <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-   <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
-   </svg>
-</button>-->
 
 <div class="max-lg:px-1">
   <div id="sidebarContainer" x-ref="sidebarContainer"></div>
 
   <main class="lg:ml-64 overflow-x-hidden p-10 pt-5 max-lg:px-4">
+    <!-- SideBar Mobile Button Component  -->
+            <div id="sidebarMobileButton" x-ref="sidebarMobileButton"></div>
         <div class="w-full mb-20 py-3 bg-white flex justify-center border-0 shadow-none">
             <img src="/img/boilerplate stuff.png" alt="Creditswitch Logo" class="h-20 max-md:h-14 max-lg:h-16">
         </div>
