--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
 </head>
 <body x-data class="font-inter font-light">
   
-<div class="max-lg:px-1">
+<div class="max-md:px-1">
   <div id="sidebarContainer" x-ref="sidebarContainer"></div>
 
-  <main class="lg:ml-64 overflow-x-hidden p-10 pt-5 max-lg:w-full max-lg:px-4 max-lg:pb-2">
+  <main class="lg:ml-64 overflow-x-hidden p-10 pt-5 max-md:w-full max-md:px-4 max-md:pb-2">
     <!-- SideBar Mobile Button Component  -->
             <div id="sidebarMobileButton" x-ref="sidebarMobileButton"></div>
       <div class="w-full mb-20 py-3 bg-white flex justify-center border-0 shadow-none">
               <img src="/img/boilerplate stuff.png" alt="Creditswitch Logo" class="h-20 max-md:h-14 max-lg:h-16">
       </div>
 
-      <div class="mt-6 px-6 space-y-3 max-lg:px-1">
-        <h1 class="text-3xl font-semibold max-lg:text-xl max-lg:px-0">Overview</h1>
-        <hr class="border-t-1 border-gray-300 mt-5 mb-8 max-lg:mb-3 max-lg:mt-2">
-        <p class="max-lg:text-sm">This document gives a description of the RESTful web services exposed on the Creditswitch Platform which enables business partners sell different products and track their account. Our RESTful web service mainly uses data in JSON format for both input and output operations.</p>
-        <p class="max-lg:text-sm">Http request header should be set to application/json or the corresponding data type.
+      <div class="mt-6 px-6 space-y-3 max-md:px-1">
+        <h1 class="text-3xl font-semibold max-md:text-xl max-md:px-0">Overview</h1>
+        <hr class="border-t-1 border-gray-300 mt-5 mb-8 max-md:mb-3 max-md:mt-2">
+        <p class="max-md:text-sm">This document gives a description of the RESTful web services exposed on the Creditswitch Platform which enables business partners sell different products and track their account. Our RESTful web service mainly uses data in JSON format for both input and output operations.</p>
+        <p class="max-md:text-sm">Http request header should be set to application/json or the corresponding data type.
         For technical assistance with the CSW API contact us at support@creditswitch.com.
         The subject line should be CSW API:(ISSUE SNIPPET) to enable swift response and support.</p>
       </div>  
