--- a/services.html
+++ b/services.html
@@ -27,10 +27,10 @@
 </head>
 <body x-data class="font-light font-inter">
 
-<div class="max-lg:px-1">
+<div class="max-md:px-1">
   <div id="sidebarContainer" x-ref="sidebarContainer"></div>
 
-  <main class="lg:ml-64 overflow-x-hidden p-10 pt-5 max-lg:px-4">
+  <main class="lg:ml-64 overflow-x-hidden p-10 pt-5 max-md:px-4">
     <!-- SideBar Mobile Button Component  -->
             <div id="sidebarMobileButton" x-ref="sidebarMobileButton"></div>
         <div class="w-full mb-20 py-3 bg-white flex justify-center border-0 shadow-none">
