--- a/low_balance_service.html
+++ b/low_balance_service.html
@@ -41,9 +41,9 @@
         <main class="lg:ml-64 overflow-x-hidden p-10 pt-5 max-lg:w-full max-lg:px-4 max-lg:pb-2">
             <!-- SideBar Mobile Button Component  -->
             <div id="sidebarMobileButton" x-ref="sidebarMobileButton"></div>
-            <div class="w-full mb-20 py-3 bg-white flex justify-center border-0 shadow-none">
-                    <img src="/img/boilerplate stuff.png" alt="Creditswitch Logo" class="h-20 max-md:h-14 max-lg:h-16">
-            </div>
+                <div class="w-full mb-20 py-3 bg-white flex justify-center border-0 shadow-none max-lg:mb-10">
+                        <img src="/img/boilerplate stuff.png" alt="Creditswitch Logo" class="h-20 max-md:h-14 max-lg:h-16">
+                </div>
             <div class="mt-6 px-6 space-y-3 justify-center max-lg:px-1">
                 <h1 class="text-3xl font-semibold max-lg:text-xl max-lg:px-0">LOW BALANCE SERVICE (AUTO TOP-UP)</h1>
                 <hr class="border-t-1 border-gray-300 mt-5 mb-8 max-lg:mb-3 max-lg:mt-2">
