--- a/integration_flow.html
+++ b/integration_flow.html
@@ -55,7 +55,7 @@
         </ul>
         </div>
         <h3 id="iFSFOUR" class="uppercase font-bold text-gray-500 my-4 max-md:my-2">Step Four</h3>
-        <p>If the service has a method for validating the customer, that method should be used first in order to make sure the customer is properly identified on provider platform and that products customer wishes to purchase are available at the moment.</p>
+        <p class="max-md:text-sm">If the service has a method for validating the customer, that method should be used first in order to make sure the customer is properly identified on provider platform and that products customer wishes to purchase are available at the moment.</p>
       </div>
     </main>
 </div>
