--- a/security_generation_snips.html
+++ b/security_generation_snips.html
@@ -30,23 +30,23 @@
 <div class="max-md:px-1">
   <div id="sidebarContainer" x-ref="sidebarContainer"></div>
 
-  <main class="lg:ml-64 overflow-x-hidden p-10 pt-5 max-md:px-4 max-md:pb-2">
+  <main class="lg:ml-64 overflow-x-hidden p-10 pt-5 max-md:w-full max-md:px-4 max-md:pb-2">
     <!-- SideBar Mobile Button Component  -->
             <div id="sidebarMobileButton" x-ref="sidebarMobileButton"></div>
-      <div class="w-full mb-20 py-3 bg-white flex justify-center border-0 shadow-none">
+      <div class="w-full mb-20 py-3 bg-white flex justify-center border-0 shadow-none max-md:mb-10">
         <img src="/img/boilerplate stuff.png" alt="Creditswitch Logo" class="h-20 max-md:h-14 max-lg:h-16">
       </div>
       
-      <div class="mt-6 px-6 space-y-3">
-        <h1 class="text-3xl font-semibold">Security: Generation Snips</h1>
-        <hr class="border-t-1 border-gray-300 mt-5 mb-8">
-        <p class="mb-10">Sample checksum generation snippets in some selected languages. These snippets are only meant to serve as a guide.</p>
+      <div class="mt-6 px-6 space-y-3 justify-center max-md:px-1">
+        <h1 class="text-3xl font-semibold max-md:text-xl max-md:px-0">Security: Generation Snips</h1>
+        <hr class="border-t-1 border-gray-300 mt-5 mb-8 max-md:mb-3 max-md:mt-2">
+        <p class="mb-10 max-md:mb-7">Sample checksum generation snippets in some selected languages. These snippets are only meant to serve as a guide.</p>
       </div>  
 
         
 
-        <h3 id="php" class="font-semibold py-3 text-blue-400">PHP</h3>
-        <div class="bg-black text-white p-8 mt-2 mb-16 font-mono text-sm">
+        <h3 id="php" class="font-semibold py-3 text-blue-400 max-md:py-1">PHP</h3>
+        <div class="bg-black text-white p-8 mt-2 mb-16 font-mono text-sm overflow-x-auto max-md:p-4 max-md:text-xs max-md:mb-12">
             <pre>
                 <code>
 <span class="text-blue-400">public function</span> <span class="text-amber-200">getChecksumAirtimeData</span>(){
@@ -86,8 +86,8 @@
             </pre>
         </div>
 
-        <h3 id="python" class="font-semibold py-3 text-blue-400">Python</h3>
-        <div class="bg-black text-white p-8 mt-2 mb-16 font-mono text-sm">
+        <h3 id="python" class="font-semibold py-3 text-blue-400 max-md:py-1">Python</h3>
+        <div class="bg-black text-white p-8 mt-2 mb-16 font-mono text-sm overflow-x-auto max-md:p-4 max-md:text-xs max-md:mb-12">
             <pre><code>
 <span class="text-blue-400">import</span> bcrypt
 <span class="text-blue-400">def</span> <span class="text-amber-200">getChecksumAirtimeData</span>():
@@ -113,8 +113,8 @@
             </code></pre>
         </div>
 
-        <h3 id="java" class="font-semibold py-3 text-blue-400">Java</h3>
-        <div class="bg-black text-white p-8 mt-2 mb-16 font-mono text-sm">
+        <h3 id="java" class="font-semibold py-3 text-blue-400 max-md:py-1">Java</h3>
+        <div class="bg-black text-white p-8 mt-2 mb-16 font-mono text-sm overflow-x-auto max-md:p-4 max-md:text-xs max-md:mb-12">
             <pre><code>
 <span class="text-blue-400">static</span> <span class="text-amber-200">String getChecksumAirtimeData</span>(){
     String loginId = <span class="text-green-400">"1234";</span>
@@ -142,8 +142,8 @@
             </code></pre>
         </div>
 
-        <h3 id="netc" class="font-semibold py-3 text-blue-400">.NET C#</h3>
-        <div class="bg-black text-white p-8 mt-2 mb-16 font-mono text-sm">
+        <h3 id="netc" class="font-semibold py-3 text-blue-400 max-md:py-1">.NET C#</h3>
+        <div class="bg-black text-white p-8 mt-2 mb-16 font-mono text-sm overflow-x-auto max-md:p-4 max-md:text-xs max-md:mb-12">
             <pre><code>
 <span class="text-blue-400">public</span> string <span class="text-amber-200">getCheckSum</span>() {
     string loginId = <span class="text-green-400">"1234";</span>
