--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </header>
 
       <div class="mt-6 px-6 space-y-3 max-md:px-1">
-        <h1 class="text-3xl font-semibold max-md:text-xl max-md:px-0">Overview</h1>
+        <h1 class="text-3xl font-semibold max-md:text-xl max-md:px-0">Overview.</h1>
         <hr class="border-t-1 border-gray-300 mt-5 mb-8 max-md:mb-3 max-md:mt-2">
         <p class="max-md:text-sm">This document gives a description of the RESTful web services exposed on the Creditswitch Platform which enables business partners sell different products and track their account. Our RESTful web service mainly uses data in JSON format for both input and output operations.</p>
         <p class="max-md:text-sm">Http request header should be set to application/json or the corresponding data type.
