--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   });
 </script>
   <link rel="stylesheet" href="./src/output.css">
-  <script type="module" src="./src/scripts/index.js"></script>
+  <script type="module" src="/src/scripts/index.js"></script>
   <title>Overview</title>
 </head>
 <body x-data class="font-inter font-light">
@@ -36,7 +36,7 @@
                 <div id="sidebarMobileButton" x-ref="sidebarMobileButton"></div>
 
                 <div class="w-full mb-20 py-3 bg-white flex justify-center border-0 shadow-none max-md:mb-10">
-                    <img src="/img/boilerplate stuff.png" alt="Creditswitch Logo" class="h-20 max-md:h-14 max-lg:h-16">
+                    <img src="img/boilerplate stuff.png" alt="Creditswitch Logo" class="h-20 max-md:h-14 max-lg:h-16">
                 </div>
             </header>
 
